--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url('./img/background_search_desktop.jpeg');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.4)) , url('./img/test-background.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  height: 25rem;
+  height: 30rem;
 }
 
 .SearchBar-sort-options ul {
@@ -19,11 +19,12 @@
   cursor: pointer;
   width: 4.33rem;
   border-bottom: 1px solid #fff;
-  padding: 0 2.58rem .33rem 2.58rem;
   line-height: 1.13;
   text-align: center;
-  font-weight: 600;
+  font-weight: 400;
   font-size: .83rem;
+  letter-spacing: .35px;
+  margin-right: 1.5rem;
   transition: color .25s;
 }
 
@@ -33,20 +34,21 @@
 
 .SearchBar-sort-options li.active,
 .SearchBar-sort-options li.active:hover {
-  border-bottom: 1px solid #f0c36c;
-  color: #f0c36c;
+  border-bottom: 1px solid #bbbbbb;
+  color: #bbbbbb;
 }
 
 .SearchBar-fields {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin-bottom: 2.88rem;
+  align-items: center;
 }
 
 .SearchBar-fields input {
-  width: 21rem;
+  width: 30%;
   padding: .66rem 1rem;
-  margin-right: 2.22rem;
+  margin: 0 0 1rem 0;
   border: 1px solid #fff;
   border-radius: 4px;
   font-size: .77rem;
@@ -58,28 +60,33 @@
 }
 
 .SearchBar-submit {
-  text-align: center;
+    text-align: center;
+    background: transparent;
+    border: none;
+    border-radius: 4px;
+    background-color: #ffc900;
+    height: 2.5rem;
+    width: 10rem;
+    cursor: pointer;
+    transition: background-color .5s;
+}
+
+.SearchBar-submit:hover {
+    background-color: #ffc800ef;
+}
+
+.SearchBar-submit:active {
+  transform: scale(.95);
 }
 
 .SearchBar-submit a {
-  border-radius: 4px;
-  padding: .72rem 1.7rem;
-  background-color: #cca353;
-  color: #ffffff;
-  font-weight: 600;
-  transition: background-color .5s;
-}
-
-.SearchBar-submit a:hover {
-  cursor: pointer;
-  background-color: #a7874b;
+    color: #0e0e0e;
+    font-weight: 400;
+    letter-spacing: .20px;
+    font-size: 14px;
 }
 
 @media only screen and (max-width: 560px) {
-  .SearchBar {
-    background-image: url('./img/background_search_mobile.jpeg');
-  }
-
   .SearchBar-sort-options ul {
     margin-left: 2rem;
     margin-right: 2rem;
